<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:elevation="@dimen/drawer_elevation"
    android:fitsSystemWindows="true"
    >
  <android.support.design.widget.CoordinatorLayout
      android:id="@+id/coordinatorLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <android.support.v4.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        view:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

      <RelativeLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          >

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8.0dip"
            android:layout_marginTop="35.0dip"
            android:src="@drawable/lifehack_logo"
            />
        <View
            android:id="@+id/divider1"
            android:layout_width="240.0dip"
            android:layout_height="1.0dip"
            android:layout_below="@+id/logoView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27.0dip"
            android:background="@color/divider"
            />

        <md.fusionworks.lifehack.view.widget.TypefaceTextView
            android:id="@+id/contactField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider1"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingTop="20.0dip"
            android:text="@string/field_contact"
            android:textColor="#434343"
            android:textSize="17.0sp"
            view:typeface="font/Roboto-Regular.ttf"
            />

        <md.fusionworks.lifehack.view.widget.TypefaceTextView
            android:id="@+id/emailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/contactField"
            android:layout_centerHorizontal="true"
            android:autoLink="none"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="@string/contact_email"
            android:textColor="@color/mainColorBlue"
            android:textSize="17.0sp"
            view:typeface="font/Roboto-Light.ttf"
            />
        <md.fusionworks.lifehack.view.widget.TypefaceTextView
            android:id="@+id/urlField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailField"
            android:layout_centerHorizontal="true"
            android:autoLink="none"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="@string/contact_url"
            android:textColor="@color/mainColorBlue"
            android:textSize="17.0sp"
            view:typeface="font/Roboto-Light.ttf"
            />
        <View
            android:id="@+id/divider2"
            android:layout_width="240.0dip"
            android:layout_height="1.0dip"
            android:layout_below="@+id/urlField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27.0dip"
            android:background="@color/divider"
            />

        <md.fusionworks.lifehack.view.widget.TypefaceTextView
            android:id="@+id/versionField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider2"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingTop="27.0dip"
            android:text="@string/app_version"
            android:textColor="#434343"
            android:textSize="17.0sp"
            view:typeface="font/Roboto-Regular.ttf"
            />

        <View
            android:id="@+id/divider3"
            android:layout_width="240.0dip"
            android:layout_height="1.0dip"
            android:layout_below="@+id/versionField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27.0dip"
            android:background="@color/divider"
            />
        <md.fusionworks.lifehack.view.widget.TypefaceTextView
            android:id="@+id/developedField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider3"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:paddingTop="27.0dip"
            android:text="@string/developed_"
            android:textColor="#434343"
            android:textSize="17.0sp"
            view:typeface="font/Roboto-Regular.ttf"
            />

        <ImageView
            android:id="@+id/developerLogoField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/developedField"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2.0dip"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="3.0dip"
            android:src="@drawable/fusionworks_logo"
            />

      </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
      <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="match_parent"
          android:layout_height="?attr/actionBarSize"
          android:background="?attr/colorPrimary"
          view:layout_scrollFlags="scroll|enterAlways"
          view:popupTheme="@style/ThemeOverlay.AppCompat.Light"
          />
    </android.support.design.widget.AppBarLayout>
  </android.support.design.widget.CoordinatorLayout>
  <include layout="@layout/drawer_layout"/>
</android.support.v4.widget.DrawerLayout>